# Basic_python

./: README.md  result.md
EmailOTP/: .gitignore  LangChainSept.py  app.js  day1.ipynb  day1.py  day2.ipynb  day2.py  day3.ipynb  day3.py  exception.py  extra.ipynb  extra.py  functions.py  langChain.ipynb  langChain.py  langChainL2.ipynb  package-lock.json  package.json  questions.md  unitTest.py
EmailOTP/.langchain-env/: pyvenv.cfg
EmailOTP/LangChanSept/: main.py  payment.jsonl  pyproject.toml
